# sugar

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  sugar-config.cmake  sugar-config.cmake.in
cmake/: README.md  Sugar
cmake/collecting/: README.md  sugar_files.cmake
cmake/core/: README.md  sugar_add_android_gtest.cmake  sugar_add_executable.cmake  sugar_add_gtest.cmake  sugar_add_ios_arch_library.cmake  sugar_add_ios_executable.cmake  sugar_add_ios_gtest.cmake  sugar_add_ios_library.cmake  sugar_add_library.cmake  sugar_add_this_to_sourcelist.cmake  sugar_doxygen_generate.cmake  sugar_generate_warning_flags.cmake  sugar_groups_generate.cmake  sugar_install_ios_arch_library.cmake  sugar_install_ios_library.cmake  sugar_install_library.cmake  sugar_link_timestamp.cmake  sugar_setup_gitenv_paths.cmake  sugar_target_link_libraries.cmake
cmake/core/templates/: AndroidTest.cmake.in
cmake/print/: README.md  sugar_fatal_error.cmake
cmake/template/: Config.cmake.in
cmake/utility/: README.md  sugar_add_definitions_debug.cmake  sugar_add_definitions_release.cmake  sugar_echo_target.cmake  sugar_execute_process.cmake  sugar_expected_number_of_arguments.cmake  sugar_generate_warning_flag_by_name.cmake  sugar_generate_warning_xcode_attr_by_name.cmake  sugar_get_all_xcode_warning_attrs.cmake  sugar_mark_macosx_resources.cmake  sugar_set_xcode_ios_sdkroot.cmake  sugar_target_add_definitions.cmake  sugar_target_add_framework.cmake  sugar_target_add_linker_flags.cmake  sugar_target_include_directories.cmake  sugar_test_directory_exists.cmake  sugar_test_file_exists.cmake  sugar_test_variable_not_empty.cmake  sugar_warning_unpack_one.cmake
examples/: README.md  test.py
examples/00-detect/: CMakeLists.txt
examples/01-simple/: CMakeLists.txt
examples/02-common/: CMakeLists.txt
examples/03-gtest/: CMakeLists.txt  README.md
examples/03-gtest/sources/: main.cpp  sugar.cmake
examples/03-gtest/sources/unittest/: sugar.cmake
examples/03-ios-gtest/: CMakeLists.txt
examples/04-boost-detect/: CMakeLists.txt  README.md  main.cpp
examples/04-gtest-universal/: CMakeLists.txt
examples/05-groups/: CMakeLists.txt
examples/05-groups/sources/module_a/main/: CMakeLists.txt
examples/05-groups/sources/module_b/main/: CMakeLists.txt
examples/06-ios/_universal_library/: CMakeLists.txt
examples/06-ios/_universal_library/sources/: A.cpp  Foo.hpp  sugar.cmake
examples/06-ios/empty_application/: CMakeLists.txt
examples/06-ios/empty_application/sources/: AppDelegate.hpp  AppDelegate.mm  main.mm  sugar.cmake
examples/06-ios/gtest/: CMakeLists.txt
examples/06-ios/gtest/sources/: main.cpp
examples/06-ios/link_library/: CMakeLists.txt
examples/06-ios/link_library_with_executable/: CMakeLists.txt  boo.cpp  foo.cpp
examples/06-ios/link_package/: CMakeLists.txt
examples/06-ios/link_package/cmake/: FindUniversalLib.cmake
examples/06-ios/link_package/sources/: main.cpp
examples/06-ios/single_view_application/: CMakeLists.txt
examples/06-ios/single_view_application/sources/: AppDelegate.mm  ViewController.mm  main.mm  sugar.cmake
examples/06-ios/universal_library_osx_sysroot/: CMakeLists.txt
examples/07-cocoa-application/: CMakeLists.txt
examples/08-doxygen/: CMakeLists.txt
examples/09-rapidjson/: CMakeLists.txt  main.cpp
examples/11-timestamp/: CMakeLists.txt  main.cpp
examples/boost/: concept_check.hpp
examples/plist/ios/: empty.plist.in  storyboard.plist.in
examples/resources/ios/images/: sugar.cmake
examples/resources/ios/storyboards/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard
python/: adapt_sugar_functions.py  generate_sugar_files.py  ios_device_launcher.py  ios_simulator_launcher.py  sugar-generate-warnings.py  sugar-warning-update-local.sh  sugar_install_ios_library.py
python/sugar/: sugar_warnings_cmake_flags_generator.py  sugar_warnings_leathers_generator.py  sugar_warnings_wiki_table_generator.py
